# PolyGraph

./: .gitignore  CMakeLists.txt  README.md
Computational Geometry/: Angle.cpp  Angle.h  Angle.hpp  CMakeLists.txt  Core.h  Core.hpp  Distance.cpp  Distance.h  Distance.hpp  Edge.hpp  GeoUtils.cpp  GeoUtils.h  GeoUtils.hpp  HyperbolicGeometry.cpp  HyperbolicGeometry.hpp  Intersection.cpp  Intersection.h  Intersection.hpp  Line.h  Line.hpp  Manifold.hpp  Plane.h  Plane.hpp  Point.h  Point.hpp  Polygon.h  Polygon.hpp  SphericalGeometry.cpp  SphericalGeometry.hpp  Triangulation.cpp  Triangulation.hpp  Vector.cpp  Vector.h  Vector.hpp
Graph Theory/: Spectral.cpp  graph.h
Graph Theory/Spectral Analysis/: CMakeLists.txt  Spectral.cpp  main.cpp  spectral_graph.hpp
